Change markdown processor to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ auto:           true
 server:         true
 server_port:    4000
 exclude:        ./config
-markdown:       rdiscount
+markdown:       kramdown
